[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/button_challenge.gd" type="Script" id=1]
[ext_resource path="res://scenes/minis/wire_mini.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/minis/lamp_mini.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/minis/switch_mini.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/tablet.gd" type="Script" id=5]
[ext_resource path="res://scenes/minis/battery_mini.tscn" type="PackedScene" id=6]
[ext_resource path="res://materials/black_plastic.tres" type="Material" id=8]
[ext_resource path="res://scenes/text_label_2d.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/button_screen_nav.gd" type="Script" id=10]
[ext_resource path="res://scripts/screens_controller.gd" type="Script" id=11]
[ext_resource path="res://OQ_Toolkit/OQ_Buttons/OQ_ButtonPressable.tscn" type="PackedScene" id=12]
[ext_resource path="res://scripts/challenge_screen.gd" type="Script" id=13]

[sub_resource type="CubeMesh" id=1]

[node name="Tablet" type="Spatial"]
transform = Transform( 0.866025, -0.17101, 0.469846, 0, 0.939693, 0.34202, -0.5, -0.296198, 0.813798, -0.37538, 0.998466, -0.686098 )
script = ExtResource( 5 )
tablet_item_scenes = [ ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 2 ) ]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.18284, 0, 0, 0, 0.124455, 0, 0, 0, 0.0151285, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 8 )

[node name="Screens" type="Spatial" parent="."]
script = ExtResource( 11 )
initial_screen = "ChallengesOverview"

[node name="Blocks" type="Spatial" parent="Screens"]

[node name="Positions" type="Spatial" parent="Screens/Blocks"]

[node name="Pos 1" type="Spatial" parent="Screens/Blocks/Positions"]
transform = Transform( 1, -1.3411e-07, -1.78814e-07, -1.49012e-08, 1, 3.42727e-07, 0, -1.49012e-08, 1, -0.137873, 0.0703216, 0.026483 )

[node name="Pos 2" type="Spatial" parent="Screens/Blocks/Positions"]
transform = Transform( 1, -4.47035e-08, -5.96046e-08, -7.45058e-08, 1, 1.63913e-07, 5.96046e-08, 1.19209e-07, 1, -0.0623097, 0.0699998, 0.026 )

[node name="Pos 3" type="Spatial" parent="Screens/Blocks/Positions"]
transform = Transform( 1, -4.47035e-08, -5.96046e-08, -7.45058e-08, 1, 1.63913e-07, 5.96046e-08, 1.19209e-07, 1, 0.0327413, 0.0699999, 0.0259999 )

[node name="Pos 4" type="Spatial" parent="Screens/Blocks/Positions"]
transform = Transform( 1, -4.47035e-08, -5.96046e-08, -7.45058e-08, 1, 1.63913e-07, 5.96046e-08, 1.19209e-07, 1, -0.138, 0.0176308, 0.0260001 )

[node name="TabletItems" type="Spatial" parent="Screens/Blocks"]
transform = Transform( 1, -5.96046e-08, 0, 0, 1, 0, 0, -4.47035e-08, 1, 0, 0, 0 )

[node name="ChallengesOverview" type="Spatial" parent="Screens"]
visible = false

[node name="TitleLabel" parent="Screens/ChallengesOverview" instance=ExtResource( 9 )]
transform = Transform( 1.2, 0, 0, 0, 0.5, 0, 0, 0, 1, -0.0240185, 0.0905329, 0.0183919 )
text = "Select a Challenge"
resize_mode = 1
font_size_multiplier = 5.0
font_color = Color( 1, 1, 1, 1 )
h_align = 1
v_align = 1

[node name="ChallengeButton1" parent="Screens/ChallengesOverview" instance=ExtResource( 12 )]
transform = Transform( 1, 1.49012e-08, 0, 0, 1, -8.9407e-08, 0, -2.98023e-08, 1, -0.0986588, 0, 0.0219712 )
script = ExtResource( 10 )
navigate_to = "Challenge1"

[node name="Buttonlabel" parent="Screens/ChallengesOverview/ChallengeButton1" instance=ExtResource( 9 )]
transform = Transform( 0.558032, -3.72529e-08, 3.57628e-07, 8.19564e-08, 0.332503, -1.49012e-08, -1.93715e-07, 0, 1, 0, 0, 0.009 )
text = "Challenge 1"
resize_mode = 1
font_size_multiplier = 3.0
background_color = Color( 0, 0, 0, 0 )
h_align = 1
v_align = 1

[node name="Challenge1" type="Spatial" parent="Screens"]
script = ExtResource( 13 )

[node name="TitleLabel" parent="Screens/Challenge1" instance=ExtResource( 9 )]
transform = Transform( 1, 7.45058e-09, 0, 0, 0.5, -5.96046e-08, 0, 0, 1, -0.0240185, 0.0905328, 0.018392 )
text = "Challenge 1"
resize_mode = 1
font_size_multiplier = 5.0
font_color = Color( 1, 1, 1, 1 )
h_align = 1
v_align = 1

[node name="BodyLabel" parent="Screens/Challenge1" instance=ExtResource( 9 )]
transform = Transform( 2.37804, 7.45058e-09, 2.98023e-08, -5.96046e-08, 0.608197, -5.96046e-08, -5.96046e-08, 5.96046e-08, 1, -0.043561, 0.0135134, 0.0183922 )
text = "Reach the following objectives to complete this challenge:"
resize_mode = 1
font_size_multiplier = 4.0
font_color = Color( 1, 1, 1, 1 )

[node name="DescriptionLabel" parent="Screens/Challenge1" instance=ExtResource( 9 )]
transform = Transform( 2.37804, 7.45058e-09, 2.98023e-08, -5.96046e-08, 0.608197, -5.96046e-08, -5.96046e-08, 5.96046e-08, 1, -0.043561, -0.0606223, 0.0183922 )
text = "- Obj 1: Have fun!
- Obj2: Have even mor fun!!
- Obj3: Shut up :-)"
resize_mode = 1
font_size_multiplier = 4.0
font_color = Color( 1, 1, 1, 1 )

[node name="StartStopButton" parent="Screens/Challenge1" instance=ExtResource( 12 )]
transform = Transform( 1, 1.49012e-08, 0, 0, 1, -8.9407e-08, 0, -2.98023e-08, 1, 0.112606, -0.0665539, 0.0219712 )
script = ExtResource( 1 )

[node name="Buttonlabel" parent="Screens/Challenge1/StartStopButton" instance=ExtResource( 9 )]
transform = Transform( 0.558032, -3.72529e-08, 3.27826e-07, 8.19564e-08, 0.332503, -2.98023e-08, -1.93715e-07, 0, 1, 7.45058e-08, -1.19209e-07, 0.00857443 )
text = "Start/Stop"
resize_mode = 1
font_size_multiplier = 3.0
background_color = Color( 0, 0, 0, 0 )
h_align = 1
v_align = 1

[node name="BackButton" parent="Screens/Challenge1" instance=ExtResource( 12 )]
transform = Transform( 1, 1.49012e-08, 0, 0, 1, -8.9407e-08, 0, -2.98023e-08, 1, -0.143173, 0.0808799, 0.0219712 )
script = ExtResource( 10 )
navigate_to = "ChallengesOverview"

[node name="Buttonlabel" parent="Screens/Challenge1/BackButton" instance=ExtResource( 9 )]
transform = Transform( 0.558032, -3.72529e-08, 3.57628e-07, 8.19564e-08, 0.332503, -1.49012e-08, -1.93715e-07, 0, 1, 0, 0, 0.009 )
text = "Back"
resize_mode = 1
font_size_multiplier = 3.0
background_color = Color( 0, 0, 0, 0 )
h_align = 1
v_align = 1

[node name="Navigation" type="Spatial" parent="."]

[node name="BlocksButton" parent="Navigation" instance=ExtResource( 12 )]
transform = Transform( 1, 1.49012e-08, 0, 0, 1, -8.9407e-08, 0, -2.98023e-08, 1, 0.140772, 0.0808799, 0.0219712 )
script = ExtResource( 10 )
navigate_to = "Blocks"

[node name="Buttonlabel" parent="Navigation/BlocksButton" instance=ExtResource( 9 )]
transform = Transform( 0.558032, -3.35276e-08, 3.27826e-07, 8.19564e-08, 0.332503, 1.49012e-08, -1.93715e-07, 0, 1, 0, 0, 0.009 )
text = "Bl√∂cks"
resize_mode = 1
font_size_multiplier = 3.0
background_color = Color( 0, 0, 0, 0 )
h_align = 1
v_align = 1

[node name="ChallengesButton" parent="Navigation" instance=ExtResource( 12 )]
transform = Transform( 1, 1.49012e-08, 0, 0, 1, -8.9407e-08, 0, -2.98023e-08, 1, 0.140772, 0.0365279, 0.0219713 )
script = ExtResource( 10 )
navigate_to = "ChallengesOverview"

[node name="Buttonlabel" parent="Navigation/ChallengesButton" instance=ExtResource( 9 )]
transform = Transform( 0.558032, -2.98023e-08, 2.98023e-07, 7.45058e-08, 0.332503, -1.49012e-08, -1.93715e-07, 0, 1, 0, 0, 0.009 )
text = "Challenges"
resize_mode = 1
font_size_multiplier = 3.0
background_color = Color( 0, 0, 0, 0 )
h_align = 1
v_align = 1
